# vapoursynth-SNEEDIF

./: .gitignore  LICENSE  README.md  hatch_hooks.py  meson.build  pyproject.toml
.github/: renovate.json
.github/workflows/: build.yml  windows.yml
SNEEDIF/: NNEDI3.cl  NNEDI3.cpp  SNEEDIF.cpp  shared.hpp
SNEEDIF/half_float/: LICENSE  umHalf.h
